--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form</title>
+  </head>
+  <body>
+    <section>
+      <div>
+        <h1 class="main-title">register</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
+          vitae!
+        </p>
+        <form class="form" action="">
+          <input
+            type="text"
+            placeholder="first name"
+            autofocus
+            name="first name"
+            required
+          />
+          <input type="text" placeholder="last name" name="last name" />
+          <input type="email" placeholder="email" name="email" required/>
+          <input type="password" placeholder="password" name="password" required/>
+          <input
+            type="password"
+            placeholder="confirm password"
+            name="confirm password"
+            required
+          />
+          <label for="">
+            <input type="checkbox" name="accept" value="accept" required/>
+            <span>I accept the <a href="">Terms of Use</a> & <a href="">Privacy Policy</a> </span>
+          </label>
+          <button type="submit">register now</button>
+        </form>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </section>
+  </body>
 </html>
