--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <section>
+    <section class="form-section">
       <div>
         <h1 class="main-title">register</h1>
         <p>
@@ -17,6 +17,7 @@
         </p>
         <form class="form" action="">
           <input
+            class="first-name"
             type="text"
             placeholder="first name"
             autofocus
@@ -24,9 +25,19 @@
             required
             pattern="^[A-Z][a-z]{1,12}$"
           />
-          <input type="text" placeholder="last name" name="last name" />
-          <input type="email" placeholder="email" name="email" required/>
-          <input type="password" placeholder="password" name="password" required/>
+          <input
+            class="last-name"
+            type="text"
+            placeholder="last name"
+            name="last name"
+          />
+          <input type="email" placeholder="email" name="email" required />
+          <input
+            type="password"
+            placeholder="password"
+            name="password"
+            required
+          />
           <input
             type="password"
             placeholder="confirm password"
@@ -34,8 +45,11 @@
             required
           />
           <label for="">
-            <input type="checkbox" name="accept" value="accept" required/>
-            <span>I accept the <a href="">Terms of Use</a> & <a href="">Privacy Policy</a> </span>
+            <input type="checkbox" name="accept" value="accept" required />
+            <span
+              >I accept the <a target="blank" href="">Terms of Use</a> &
+              <a target="blank" href="">Privacy Policy</a>
+            </span>
           </label>
           <button type="submit">register now</button>
         </form>
