Make in row first-name & last-name

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
           vitae!
         </p>
         <form class="form" action="">
-          <input
-            class="first-name"
-            type="text"
-            placeholder="first name"
-            autofocus
-            name="first name"
-            required
-            pattern="^[A-Z][a-z]{1,12}$"
-          />
-          <input
-            class="last-name"
-            type="text"
-            placeholder="last name"
-            name="last name"
-          />
+          <fieldset>
+            <input
+              class="first-name"
+              type="text"
+              placeholder="first name"
+              autofocus
+              name="first name"
+              required
+              pattern="^[A-Z][a-z]{1,12}$"
+            />
+            <input
+              class="last-name"
+              type="text"
+              placeholder="last name"
+              name="last name"
+            />
+          </fieldset>
+
           <input type="email" placeholder="email" name="email" required />
           <input
             type="password"
