Add color and border style

--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
           />
           <label for="">
             <input type="checkbox" name="accept" value="accept" required />
-            <span
-              >I accept the <a target="blank" href="">Terms of Use</a> &
+            <span>
+              I accept the <a target="blank" href="">Terms of Use</a> &
               <a target="blank" href="">Privacy Policy</a>
             </span>
           </label>
-          <button type="submit">register now</button>
+          <button class="btn" type="submit">register now</button>
         </form>
-        <p>Lorem ipsum dolor sit amet.</p>
+        
       </div>
     </section>
+    <p class="out-form">Lorem ipsum dolor sit amet.<a href="">Sign in</a></p>
   </body>
 </html>
