Add content text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <div>
         <h1 class="main-title">register</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
-          vitae!
+          Create your account. It`s free and only takes a minute.
         </p>
         <form class="form" action="">
           <fieldset>
@@ -56,9 +55,8 @@
           </label>
           <button class="btn" type="submit">register now</button>
         </form>
-        
-      </div>
+              </div>
     </section>
-    <p class="out-form">Lorem ipsum dolor sit amet.<a href="">Sign in</a></p>
+    <p class="out-form">Already have an account? <a href="">Sign in</a></p>
   </body>
 </html>
