Clean up structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <section class="form-section">
       <div>
         <h1 class="main-title">register</h1>
-        <p>
-          Create your account. It`s free and only takes a minute.
-        </p>
+        <p>Create your account. It`s free and only takes a minute.</p>
         <form class="form" action="">
           <fieldset>
             <input
@@ -55,7 +53,7 @@
           </label>
           <button class="btn" type="submit">register now</button>
         </form>
-              </div>
+      </div>
     </section>
     <p class="out-form">Already have an account? <a href="">Sign in</a></p>
   </body>
