Fix label attribute

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             name="confirm password"
             required
           />
-          <label for="">
+          <label>
             <input type="checkbox" name="accept" value="accept" required />
             <span>
               I accept the <a target="blank" href="">Terms of Use</a> &
