--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <section class="form-section">
       <div>
-        <h1 class="main-title">register</h1>
+        <h1 class="main-title overflow">register</h1>
         <p>Create your account. It`s free and only takes a minute.</p>
         <form class="form" action="">
-          <fieldset>
+          <div>
             <input
               class="first-name"
               type="text"
@@ -29,7 +29,7 @@
               placeholder="last name"
               name="last name"
             />
-          </fieldset>
+          </div>
 
           <input type="email" placeholder="email" name="email" required />
           <input
@@ -51,7 +51,7 @@
               <a target="blank" href="">Privacy Policy</a>
             </span>
           </label>
-          <button class="btn" type="submit">register now</button>
+          <button class="btn overflow" type="submit">register now</button>
         </form>
       </div>
     </section>
